ci_cd/drone/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: ci-cd
  labels:
    app.kubernetes.io/name: drone
    app.kubernetes.io/instance: drone
    app.kubernetes.io/part-of: ci-cd
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app.kubernetes.io/name: drone
    app.kubernetes.io/instance: drone
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
