ci_cd/drone/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: drone
  namespace: ci-cd
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`drone.svc.k8s.monster.lab`)
      kind: Rule
      services:
        - name: drone
          port: 80
  tls:
    secretName: monster-server-cert
    options:
      name: mtls-strict
      namespace: ci-cd
